--- a/client/error.html
+++ b/client/error.html
@@ -9,7 +9,7 @@
     <h1>404 - File Not Found</h1>
     <p>
         Check your URL, or your typing!!
-        Perhaps you are looking for <a href= /random-joke>/random-joke </a> or <a href= /random-jokes?limit=10>/random-jokes?limit=10 </a> </p> <p> :-O </p>
+        Perhaps you are looking for <a href= /random-joke>/random-joke </a> or <a href= /random-jokes?limit=10>/random-jokes?limit=10 </a> or <a href= /joke-client.html> the joke client? </a> </p> <p> :-O </p>
 </body>
 
 </html>
